tests/fixtures/validate/strict/invalid/strict-invalid-duplicate-key-1.yini
^ App
title = "My App"
enabled = true

title = "My Renamed App"   // WARNING: duplicate key in the same section
